--- a/style.css
+++ b/style.css
@@ -1,16 +1,64 @@
-p {
-	font-size: 20px;
+h1 {
+	font-size: 18px;
 	text-align: center;
-	font-family: "helvetica";
+	font-family: "georgia";
+	text-transform: uppercase;
+	margin: 50px auto 10px auto; 
+}
+
+h2 {
+	font-size: 18px;
+	text-align: left;
+	font-family: "georgia";
+}
+
+p {
+	font-size: 16px;
+	text-align: left;
+	font-family: "georgia";
+	border: 0px solid black;
+	width: 500px;
+	margin: 50px auto;
+}
+
+#intro{
 	padding: 50px;
 	margin: 50px 100px;
 }
 
 footer {
 	text-align: center;
-	margin: 300px 300px 0px 300px;
+	margin: 150px auto 0px auto;
 	border: 1px dotted black;
 	padding: 0px 0px;
-	font-family: "helvetica";
+	font-family: "georgia";
 	width: 700px;	
 }
+
+.img-circle {border-radius: 50%;}
+
+.img-circle:hover {border: 4px solid #FF3;}
+
+.header {
+	background:url(title.PNG) top center no-repeat; 
+	margin: 0 auto; 
+	padding-top: 150px;
+}
+
+a {color: black;}
+
+table {
+	font-size: 16px;
+	font-family: "georgia";
+	width: 600px;
+	margin: 50px auto 0 auto;
+}
+
+table.short-stories{
+	font-size: 16px;
+	font-family: "georgia";
+	width: 600px;
+	margin: 0 auto;
+}
+
+td {padding: 5px;}
