--- a/style.css
+++ b/style.css
@@ -67,7 +67,10 @@ table.short-stories{
 	margin: 0 auto;
 }
 
-td {padding: 5px;}
+td {
+	padding: 5px;
+	vertical-align: top;
+}
 
 .nav{
 	text-align: right;
