--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ p {
 
 footer {
 	text-align: center;
-	margin: 150px auto 0px auto;
+	margin: 60px auto 0px auto;
 	border: 1px dotted black;
 	padding: 0px 0px;
 	font-family: "georgia";
@@ -65,30 +65,6 @@ td {
 	vertical-align: top;
 }
 
-.nav{
-	font-family: 'georgia';
-	font-size: 16px;
-	text-align: center;
-}
-
-/*
-	do stuff here starting at 1200px
-	the styles defined above for .nav will be used up until here and even wider unless overwritten
-	new styles within the media query will only come into effect at 1200px wide (that is, width ≥ 1200)
-	you can also have a max-width query, see https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries
-	try dragging your window to figure out the correct values, I just guessed at 1200
-	you can do multiple media queries (that's what these are called):
-	min-width 600, min-width 800, min-width 1200, etc. to get granular about styling
-*/
-@media (min-width: 1200px) {
-	.nav {
-		text-align: right;
-		position: absolute;
-		left: 100px;
-		top: 550px;
-	}
-}
-
 
 .navigation {
 	border-top: 4px double black;
@@ -102,10 +78,12 @@ td {
 	padding: 10px 0;
 }
 
-.nomargin {
-	margin: 0 auto;
-}
+.nomargin {margin: 0 auto;}
 
-.social-media {
-	margin: 30px;
+.social-media {margin: 30px;}
+
+.homepage {
+	position: relative;
+	right: 60px;
+	margin: 20px auto;
 }
