--- a/feedstyle.css
+++ b/feedstyle.css
@@ -6,18 +6,13 @@ link {font-family:"Garamond"; font-size:small;}
 
 textinput {display:none;}
 
-channel {display:block; font-family:"Geneva","Arial","Helvetica",sans-
+channel {display:block; font-family:"Garamond"; margin-left: 1em; margin-right: 1em;}
 
-serif; margin-left: 1em; margin-right: 1em;}
-
-channel > title {display:block; font-family:"Garamond"; font-size:x-
-
-large; font-weight:bold; margin-bottom:1ex; text-align:center; }
+channel > title {display:block; font-family:"Garamond"; font-size:x-large; font-weight:bold; margin-bottom:1ex; text-align:center; }
 
 channel > link {display:none;}
 
-channel > description {font-size:large; margin-left:2em; margin-top:1ex;
-margin-bottom:1ex; margin-right:2em; text-align:center; color: black; }
+channel > description {font-size:large; margin-left:2em; margin-top:1ex; margin-bottom:1ex; margin-right:2em; text-align:center; color: black; }
 
 channel > lastBuildDate {display:block; font-size:small;}
 
@@ -29,8 +24,7 @@ image > link {display:none;}
 
 item {display:block; padding: 2px 30px 2px 30px;}
 
-item > title {display:block; font-family:"Garamond"; font-size:large;
-font-weight:bold; text-align:left; margin: 5px; padding: 2px; color: 
+item > title {display:block; font-family:"Garamond"; font-size:large; font-weight:bold; text-align:left; margin: 5px; padding: 2px; color: 
 
 black; border-bottom: 1px solid black}
 
